# haasteikko

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  helmet-tool.code-workspace  package-lock.json  package.json  plan.md
.github/: copilot-instructions.md  dependabot.yaml
.github/prompts/: impl.prompt.md  plan.prompt.md
.github/workflows/: main.yml  prod_tag.yml
HelmetToolBackend/: HelmetToolBackend.csproj
backend/: .env  .gitignore  Cargo.toml  go.mod  go.sum  main.go
backend/auth/: jwt_parser.go
backend/migrations/: V2026012301__add_user_preferences.sql
backend/shared/: ComosTools.go
backend/src/: main.rs
backend/src/challenge_answers/: domain.rs
backend/src/preferences/: mod.rs  repository.rs
backend/testing_auth_v2/: route.go
backendV2/: .env  Cargo.toml
backendV2/migrations/: V2025100401__initial_schema.sql
backendV2/src/: auth.rs  database.rs  main.rs  utils.rs
backendV2/src/challenge/: api.rs  domain.rs  mod.rs  repository.rs
backendV2/src/challenge_answers/: api.rs  domain.rs  mod.rs  repository.rs
backendV2/src/solution/: api.rs  domain.rs  mod.rs
frontend/: .env  .env.test  .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: auth.setup.ts  example.spec.ts  new_item.spec.ts  test-auth.ts
frontend/e2e/mock-oidc/: server.ts
frontend/src/: main.ts  vite-env.d.ts
frontend/src/api/: HttpProxy.ts  answerApiClient.ts  baseApiClient.ts  challengeApiClient.ts  libraryApiClient.ts  preferencesApiClient.ts  solutionsApiClient.ts
frontend/src/auth/: auth.ts
frontend/src/components/: NavBar.vue
frontend/src/components/Challenge/: ChallengeCard.vue
frontend/src/components/ChallengeManagement/: ChallengeQuestionCard.vue  EditChallenge.vue  ManageChallenges.vue
frontend/src/components/Entry/: EntryBasics.vue  EntryChallenge.vue
frontend/src/components/EntryListing/: EntryFilter.vue  EntryListing.vue  LibraryItemCard.vue  NewItemModal.vue
frontend/src/components/basics/: BrandedButton.stories.ts  BrandedButton.vue  BrandedSelect.vue  CustomIcon.vue  DatePicker.vue  PopupModal.vue  TextInput.vue
frontend/src/components/icons/: IconDoubleCheck.vue  IconHome.vue  IconWarning.vue
frontend/src/models/: LibraryItem.ts  iconName.ts
frontend/src/modules/: auth-store.ts
frontend/src/plugins/: HttpPlugin.ts
frontend/src/router/: index.ts
frontend/src/views/: ChallengeManagementView.vue  ChallengeSolutionView.vue  EntryListingView.vue  EntryView.vue  HomeView.vue  LoginView.vue  OverallChallengesView.vue  RedirectPage.vue
infra/: main.bicep  template.bicepparam
scripts/: .gitignore  migrate_cosmos_to_sqlite.py  requirements.txt  user_content_migration.py
