[workspace]
members = [
    "packages/backend"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Haasteikko Team"]

[workspace.dependencies]
# Shared dependencies can be defined here
axum = { version = "0.8.8", features = ["macros"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
dotenv = "0.15.0"
tokio = { version = "1.49.0", features = ["full"] }