[package]
name = "haasteikko-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tower-http = { version = "0.6.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3.23.0"
