[package]
name = "haasteikko-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
dotenv = "0.15.0"
tokio = { version = "1.49.0", features = ["full"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
chrono = "0.4.43"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[dev-dependencies]
tempfile = "3.25.0"
