[package]
name = "haasteikko-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
axum-extra = { version = "0.10.2", features = ["typed-header"] }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }